added category associations