@@ -1,18 +1,24 @@
 package com.brainstormer.ecommerce.services;
 
+import com.brainstormer.ecommerce.dtos.CategoryResponseDto;
 import com.brainstormer.ecommerce.dtos.ProductRequestDto;
 import com.brainstormer.ecommerce.dtos.ProductResponseDto;
+import com.brainstormer.ecommerce.dtos.ProductResponseWithDetailsDto;
 import com.brainstormer.ecommerce.repositories.ProductRepository;
+import com.brainstormer.ecommerce.schema.Category;
 import com.brainstormer.ecommerce.schema.Product;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class ProductService {
     private final ProductRepository productRepository;
+
+    private final CategoryService categoryService;
 
     public List<ProductResponseDto> getAllProducts() {
         var products = productRepository.findAll();
@@ -22,10 +28,10 @@ public class ProductService {
                         .description(product.getDescription())
                         .price(product.getPrice())
                         .imageUrl(product.getImageUrl())
-                        .category(product.getCategory())
+//                        .category(product.getCategory().getName())
                         .rating(product.getRating())
                         .build())
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public ProductResponseDto getProductById(Long id) {
@@ -35,19 +41,24 @@ public class ProductService {
                         .description(product.getDescription())
                         .price(product.getPrice())
                         .imageUrl(product.getImageUrl())
-                        .category(product.getCategory())
+//                        .category(product.getCategory().getName())
                         .rating(product.getRating())
                         .build())
                 .orElseThrow(() -> new RuntimeException("Product not found"));
     }
 
     public ProductResponseDto createProduct(ProductRequestDto productRequestDto) {
+        CategoryResponseDto categoryResponseDto = categoryService.getCategoryById(productRequestDto.getCategoryId());
+        Category category = Category.builder()
+                .name(categoryResponseDto.getName())
+                .build();
+
         Product newProduct = Product.builder()
                 .title(productRequestDto.getTitle())
                 .description(productRequestDto.getDescription())
                 .price(productRequestDto.getPrice())
                 .imageUrl(productRequestDto.getImageUrl())
-                .category(productRequestDto.getCategory())
+                .category(category)
                 .rating(productRequestDto.getRating())
                 .build();
 
@@ -57,7 +68,7 @@ public class ProductService {
                 .description(savedProduct.getDescription())
                 .price(savedProduct.getPrice())
                 .imageUrl(savedProduct.getImageUrl())
-                .category(savedProduct.getCategory())
+//                .category(savedProduct.getCategory().getName())
                 .rating(savedProduct.getRating())
                 .build();
     }
@@ -74,13 +85,27 @@ public class ProductService {
                         .description(product.getDescription())
                         .price(product.getPrice())
                         .imageUrl(product.getImageUrl())
-                        .category(product.getCategory())
+//                        .category(product.getCategory().getName())
                         .rating(product.getRating())
                         .build())
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public List<String> getAllUniqueCategory() {
         return productRepository.findDistinctCategory();
+    }
+
+    public List<ProductResponseWithDetailsDto> getProductDetailsById(Long id) {
+        return productRepository.findProductWithDetailsById(id)
+                .stream()
+                .map(product -> ProductResponseWithDetailsDto.builder()
+                        .title(product.getTitle())
+                        .description(product.getDescription())
+                        .price(product.getPrice())
+                        .imageUrl(product.getImageUrl())
+                        .category(product.getCategory().getName())
+                        .rating(product.getRating())
+                        .build())
+                .collect(Collectors.toList());
     }
 }
